# menu-scraper

./: Cargo.toml  README.md
client/: Cargo.toml  index.html
server/: Cargo.toml
server/src/: main.rs
