[package]
name = "menu-scraper"
version = "0.0.1"
edition = "2021"
description = "Scrapes restaurant menus"
readme = "README.md"
repository = "https://github.com/TassiloBalbo/menu-scraper"
license = "MIT"
keywords = ["yew", "trunk"]
categories = ["gui", "wasm", "web-programming"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
reqwest = "0.11.13"
scraper = "0.14.0"
yew = { version="0.20", features=["csr"] }
